--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     container_name: grpc-postgres
     restart: always
     environment:
-      - POSTGRES_PASSWORD=satheesan
-      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
     networks:
       - grpc_user_network
     volumes:
